--- a/_config.yml
+++ b/_config.yml
@@ -82,12 +82,12 @@ analytics:
 author:
   name             : "Prahalathan Sundaramoorthy"
   avatar           : "profile.png"
-  bio              : "Your biography for the left-hand sidebar"
+  bio              : "Master's student at the University of Southern California. Specializing in machine learning and big data"
   location         : "Los Angeles, California, United States"
   employer         : "Research Intern at HP Labs"
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?hl=en&authuser=1&user=PqKWqZkAAAAJ"
-  email            :
+  email            :  "prahalath27@gmail.com"
   researchgate     :  
   uri              :
   bitbucket        :
