added all publications

--- a/_config.yml
+++ b/_config.yml
@@ -96,13 +96,13 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "www.github.com/prahalath"
+  github           : "prahalath"
   google_plus      :
   keybase          :
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/prahal-sundaramoorthy/"
+  linkedin         : "prahal-sundaramoorthy/"
   orcid            : 
   pinterest        :
   soundcloud       :
