--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,11 +1,14 @@
 # main links links
 main:
-  
+
+  - title: "Education"
+    url: /education/
+
   - title: "Publications"
     url: /publications/    
     
-  - title: "Portfolio"
-    url: /portfolio/
+  - title: "Education"
+    url: /education/
         
   - title: "Blog Posts"
     url: /year-archive/
