--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,14 +4,11 @@ main:
   - title: "Education"
     url: /education/
 
+  - title: "Experience"
+    url: /experience/
+
   - title: "Publications"
     url: /publications/    
-    
-  - title: "Education"
-    url: /education/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
     
   - title: "CV"
     url: /cv/
