--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Prahalathan Sundaramoorthy"
   avatar           : "Professional_Photo.jpg"
   bio              : "Master's student at the University of Southern California. Specializing in machine learning and big data"
-  location         : "Los Angeles, California, United States"
+  location         : "Los Angeles"
   employer         : "Research Intern at HP Labs"
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?hl=en&authuser=1&user=PqKWqZkAAAAJ"
